--- a/ltconfig.in
+++ b/ltconfig.in
@@ -645,7 +645,7 @@ else
     wl='-Qoption ld '
     ;;
 
-  sysv4.2uw2* | sysv5*)
+  sysv4.2uw2* | sysv5* | sysv4.3*)
     pic_flag='-KPIC'
     link_static_flag='-Bstatic'
     wl='-Wl,'
@@ -1725,7 +1725,7 @@ sunos4*)
   shlibpath_var=LD_LIBRARY_PATH
   ;;
 
-sysv4.2uw2*)
+sysv4.2uw2* | sysv4.3*)
   version_type=linux
   library_names_spec='${libname}${release}.so$versuffix ${libname}${release}.so$major $libname.so'
   soname_spec='${libname}${release}.so$major'
