--- a/ltconfig.in
+++ b/ltconfig.in
@@ -1237,9 +1237,12 @@ DllMain (HINSTANCE hInst, DWORD reason, LPVOID reserved)
     ;;
 
   netbsd*)
-    # Tested with NetBSD 1.2 ld
-    archive_cmds='$LD -Bshareable -o $lib $libobjs $deplibs'
-    hardcode_libdir_flag_spec='-R$libdir'
+    if echo __ELF__ | $CC -E - | grep __ELF__ >/dev/null; then
+      archive_cmds='$LD -Bshareable -o $lib $libobjs $deplibs'  # a.out
+    else
+      archive_cmds='$LD -shared -o $lib $libobjs $deplibs'      # ELF
+    fi
+    hardcode_libdir_flag_spec='${wl}-R$libdir'
     hardcode_direct=yes
     hardcode_shlibpath_var=no
     ;;
@@ -1679,7 +1682,21 @@ linux-gnu*)
   fi
   ;;
 
-netbsd* | openbsd*)
+netbsd*)
+  version_type=sunos
+  if echo __ELF__ | $CC -E - | grep __ELF__ >/dev/null; then
+    library_names_spec='${libname}${release}.so.$versuffix'
+    finish_cmds='PATH="$PATH:/sbin" ldconfig -m $libdir'
+    dynamic_linker='NetBSD (a.out) ld.so'
+  else
+    library_names_spec='${libname}${release}.so.$versuffix ${libname}${release}.so.$major ${libname}${release}.so'
+    soname_spec='${libname}${release}.so.$major'
+    dynamic_linker='NetBSD ld.elf_so'
+  fi
+  shlibpath_var=LD_LIBRARY_PATH
+  ;;
+
+openbsd*)
   version_type=sunos
   library_names_spec='${libname}${release}.so$versuffix'
   finish_cmds='PATH="\$PATH:/sbin" ldconfig -m $libdir'
