* ltmain.in (libobjs_save, oldobjs): when building an  	old-fashioned archive, use a copy of libobjs saved before  	convenience libraries are appended
	* libltdl/ltdl.h (_LTDLL_EXPORT, _LTDLL_IMPORT): use cygwin or
	unix library import/export primitives; this may be convenient for
	people willing to create DLLs
	(_LTDLL_EXTERN): select _LTDLL_EXPORT or _LTDLL_IMPORT depending
	on _LTDL_COMPILE_
	* libltdl/ltdl.h, libltdl/ltdl.c (lt_dlpreopen): new function,
 	that replaces the current preloaded_symbols list with its
 	argument, and returns the old value, initially NULL
	(dldpre_init): don't refer to dld_preloaded_symbols any more
	(dldpre_open, dldpre_sym): search preloaded_symbols
	(lt_dlpreopen_default): call lt_dlpreopen with
	dld_preloaded_symbols, that is declared as extern; it should be
	called from the main program or from some static library without
	-no-undefined
	(lt_dlerror): new function, that returns the error message for the
	last error occurred; the error message is kept in the static
	variable last_error
	* libltdl/configure.in (enable-ltdl-install): moved back from
	enable-install; other packages might use enable-install already,
	better have fine grained control over this.
	* libltdl/Makefile.am (libltdls.la): discarded

--- a/libltdl/Makefile.am
+++ b/libltdl/Makefile.am
@@ -2,32 +2,20 @@
 #
 AUTOMAKE_OPTIONS = no-dependencies foreign
 
-LTDL_VERSION = -version-info 0:1:0
-
-ltdls.lo: ltdl.c libtool
-	$(LTCOMPILE) -DUSE_DLPREOPEN -o $@ -c $<
-
-lib_LTLIBRARIES = @LIBLIBS@
-noinst_LTLIBRARIES = @NOINSTLIBS@
-EXTRA_LTLIBRARIES = libltdl.la libltdls.la
+LTDL_VERSION = -version-info 1:0:1
 
 if INSTALL_LTDL
-LTDL_FLAGS = $(LTDL_VERSION) -rpath $(libdir)
+LTDL_FLAGS = $(LTDL_VERSION) -rpath $(libdir) 
 include_HEADERS = ltdl.h
 else
 LTDL_FLAGS =
 noinst_HEADERS = ltdl.h
 endif
 
-libltdl_la_SOURCES = ltdl.c ltdl.h
-libltdl_la_LDFLAGS = $(LTDL_FLAGS) $(LIBADD_DL)
-libltdls_la_LIBADD = ltdls.lo
-libltdls_la_SOURCES = ltdl.h
-libltdls_la_LDFLAGS = $(LTDL_FLAGS) $(LIBADD_DL) 
+EXTRA_LTLIBRARIES = libltdl.la
 
-# rebuild the libtool script if needed
-ltdl.lo: libtool
-libtool: $(srcdir)/../ltconfig $(srcdir)/../ltmain.sh
-	rm -f libtool
-	cd .. && $(MAKE) libtool
-	$(MAKE) -f ../Makefile srcdir=$(srcdir)/.. LIBTOOL_DEPS= libtool
+lib_LTLIBRARIES = @LIBLIBS@
+noinst_LTLIBRARIES = @NOINSTLIBS@
+
+libltdl_la_SOURCES = ltdl.c
+libltdl_la_LDFLAGS = $(LTDL_FLAGS) $(LIBADD_DL)
