default is to allow undefined symbols in libraries

--- a/ltmain.in
+++ b/ltmain.in
@@ -568,7 +568,14 @@ compiler."
       # we shouldn't force the makefile maintainer to figure out
       # which system we are compiling for in order to pass an extra
       # flag for every libtool invokation.
-      allow_undefined=no
+      # allow_undefined=no
+
+      # FIXME: Unfortunately, there are problems with the above when trying
+      # to make a dll which has undefined symbols, in which case not
+      # even a static library is built.  For now, we need to specify
+      # -no-undefined on the libtool link line when we can be certain
+      # that all symbols are satisfied, otherwise we get a static library.
+      allow_undefined=yes
 
       # This is a source program that is used to create dlls on Windows
       # Don't remove nor modify the starting and closing comments
