*** empty log message ***

--- a/demo/configure.in
+++ b/demo/configure.in
@@ -9,5 +9,10 @@ AM_PROG_LIBTOOL
 AM_CONDITIONAL(BINARY_HELLDL, [dnl
 grep '^global_symbol_pipe=..*$' ./libtool >/dev/null])
 
+AC_CHECK_HEADERS(string.h math.h)
+
+AC_CHECK_LIB(m, cos, LIBADD_M="-lm", LIBADD_M=)
+AC_SUBST(LIBADD_M)
+
 dnl Output the makefile
 AC_OUTPUT(Makefile)
