* configure.in (AC_CONFIG_SUBDIRS): add libltdl, demo, mdemo and 	depdemo commented out, so that `dist' works before `check' 	(BUILD_LTDL): will contain libltdl if --enable-ltdl-install 	* Makefile.am (DIST_SUBDIRS): expand SUBDIRS and add depdemo, 	commented out 	(SUBDIRS): add $(BUILT_LTDL) 	* libltdl/Makefile.am (EXTRA_LTLIBRARIES): add libtest.la, the 	same as libltdl but always a convenience library.  Not built by 	default.  Both libraries now depend on the libtool script, that 	depends on ../libtool and is rebuilt when needed 	* mdemo/Makefile.am (mdemo, mdemo.debug): depend on and link with 	../libltdl/libtest.la, that is rebuilt if needed 	(mdemo_LDADD): removed $(LIBADD_M), to avoid silent failures 	(foo1.la): renamed from libfoo1.la; test removing the lib prefix 	* mdemo/foo1.c: renamed libfoo1_LTX symbols to foo1_LTX 	* mdemo/main.c: don't include string.h nor math.h, nor refer to 	sin nor cos 	* tests/mdemo-exec.test: renamed libfoo1.la to foo1.la 	* tests/mdemo-inst.test: ditto

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,8 @@
 ## Process Makefile.am with automake to create Makefile.in. -*-Makefile-*-
 ## Gordon Matzigkeit <gord@gnu.ai.mit.edu>, 1996
 AUTOMAKE_OPTIONS = gnits
-SUBDIRS = . doc tests
-DIST_SUBDIRS = $(SUBDIRS) demo libltdl mdemo
+SUBDIRS = . doc tests $(BUILD_LTDL)
+DIST_SUBDIRS = . doc tests libltdl demo mdemo # depdemo
 
 # We need to export these variables when we run ltconfig.
 CFLAGS = @CFLAGS@
