--- a/libltdl/Makefile.am
+++ b/libltdl/Makefile.am
@@ -12,10 +12,20 @@ LTDL_FLAGS =
 noinst_HEADERS = ltdl.h
 endif
 
-EXTRA_LTLIBRARIES = libltdl.la
+EXTRA_LTLIBRARIES = libltdl.la libtest.la
 
 lib_LTLIBRARIES = @LIBLIBS@
 noinst_LTLIBRARIES = @NOINSTLIBS@
 
 libltdl_la_SOURCES = ltdl.c
-libltdl_la_LDFLAGS = $(LTDL_FLAGS) $(LIBADD_DL)
+libltdl_la_LDFLAGS = $(LTDL_FLAGS)
+libltdl_la_LIBADD = $(LIBADD_DL)
+libltdl_la_DEPENDENCIES = libtool
+
+libtest_la_SOURCES = $(libltdl_la_SOURCES)
+libtest_la_LDFLAGS =
+libtest_la_LIBADD = $(libltdl_la_LIBADD)
+libltdl_la_DEPENDENCIES = libtool
+
+libtool: ../libtool
+	./config.status --recheck
