--- a/configure.in
+++ b/configure.in
@@ -8,6 +8,16 @@ AC_SUBST(pkgdatadir)
 aclocaldir='${datadir}/aclocal'
 AC_SUBST(aclocaldir)
 
+AC_ARG_ENABLE(ltdl-install,
+  [--enable-ltdl-install     install libltdl])
+AM_CONDITIONAL(INSTALL_LTDL, test x$enable_ltdl_install = xyes)
+if test x$enable_ltdl_install = xyes; then
+  BUILD_LTDL=libltdl
+else
+  BUILD_LTDL=
+fi
+AC_SUBST(BUILD_LTDL)
+
 dnl Use the specified CC, RANLIB, and LD while running ltconfig.
 AC_PROG_CC
 AC_PROG_RANLIB
@@ -18,6 +28,8 @@ AC_PROG_LN_S
 dnl For the `lineno' script (which puts line numbers into `ltconfig').
 AC_PROG_AWK
 
+AC_CONFIG_SUBDIRS(libltdl demo mdemo  dnl #depdemo
+)
 AC_OUTPUT([Makefile doc/Makefile tests/Makefile])
 
 # Local Variables:
